--- a/public/css/index.css
+++ b/public/css/index.css
@@ -17,7 +17,6 @@
     position: absolute;
     right: 12px;
     top:8px;
-    height:17px;
 }
 
 
@@ -64,79 +63,47 @@
 
 
 
-.index-service {
-    position: relative;
-    padding: 46px 0 12px 0;
+/* service type height 108px*/
+.index-service-new {
     background: #1aa586;
-    color: #fff;
-
-    height:120px;
+    padding: 16px 16px;
+    overflow: hidden;
+    /*height: 120px;*/
 }
 
-.index-service > .item{
+.index-service-new > .active{
+    position: relative;
+    font-size:32px;
+    color: #fff;
+    line-height: 48px;
+}
+
+.index-service-new > .items {
+    height:28px;
+}
+
+.index-service-new > .items > .item{
     display: inline-block;
-    position: absolute;
-    height: 62px;
-    width: 33.33%;
-    text-align: center;
+    float: left;
+    width: 25%;
+    font-size: 14px;
+    line-height:28px;
     color: #f0f0f0;
 
-    vertical-align: bottom;
-    padding-top:22px;
-
 }
 
-.index-service > .item.item0{
-    left:0;
+.index-service-new > .items > .item > .icon{
+    margin:0;
+    width: 10px;
 }
-
-.index-service > .item.item1 {
-    left: 33.33%;
-}
-
-.index-service > .item.item2 {
-    left: 66.66%;
-}
-
-.index-service > .item > .name{
-    display:block ;
-}
-
-.index-service > .item > .sub{
-    display:block ;
-    font-size: 12px;
-
-}
-
-.index-service > .item.item1{
-    padding-top:0;
-}
-
-.index-service > .item.item1 > .name{
-    line-height: 42px;
-    font-size: 32px;
-    color:#fff;
-}
-
-.index-service > .item.item1 > .sub{
-    font-size: 14px;
-    color:#fff;
-}
-
-.index-service:after{
-    clear:both;
-    display: block;
-    content:''
-}
-
 
 
 .index-main {
     position: absolute;
-    top: 196px;
+    top: 184px;
     bottom: 0;
     width: 100%;
-    padding: 26px 32px 60px 32px;
+    padding: 26px 32px 61px 32px;
 
     overflow-y: auto;;
 }
@@ -220,41 +187,6 @@
     font-weight:normal;
     height:46px;
 }
-
-
-
-.index-footer{
-    position:absolute;
-    bottom:0;
-    width:100%;
-    height:40px;
-    padding: 0 32px;
-}
-
-.index-footer > .item{
-    position: relative;
-    display: block;
-    float: left;
-    width:33.33%;
-    /*width:50%;*/
-    line-height: 36px;
-
-    text-align: center;
-    font-size: 12px;
-    color: #999;
-}
-
-.index-footer > .item > i.icon{
-    margin: 0;
-}
-
-.index-footer > .item > .ui.floating.label {
-    top: -4px;
-    padding: 0.3em 0.4em;
-    opacity: 0.9;
-    font-weight: normal;
-}
-
 
 
 .index-footer-new{
@@ -560,13 +492,19 @@
     color: #fff;
 }
 
+
+.services-selector .service {
+    display: inline-block;
+    padding: 8px 12px;
+    margin: 0 8px 8px 0;
+    border: 1px solid #f0f0f0;
+    border-radius: 4px;
+}
+
 /** iphone 5 5s se**/
 @media screen and (max-width: 320px) {
-    .index-service{
-        padding: 16px 0 10px 0;
-
-        /**46 12 **/
-        height:88px;
+    .index-service-new{
+        padding: 7px 16px;
     }
 
     .index-main {
