--- a/modules/appointment/view/complete.html
+++ b/modules/appointment/view/complete.html
@@ -27,7 +27,8 @@
 
     <div class="buttons">
         <a class="ui button fluid orange" ng-click="shopMap()">导航至门店</a>
-        <a class="ui button fluid basic" ng-click="path('/appointment')">我知道了</a>
+        <a class="ui button fluid green" ng-click="path('/appointment/orders')">查看我的预约</a>
+        <a class="ui button fluid basic" ng-click="close()">我知道了</a>
     </div>
 </div>
 
