--- a/public/css/index.css
+++ b/public/css/index.css
@@ -13,10 +13,31 @@
 }
 
 
-.index .poweredby{
+.index .poweredby {
     position: absolute;
     right: 12px;
-    top:8px;
+    top: 8px;
+    color: rgba(217, 217, 217, 0.45);
+}
+
+.index .poweredby >.p {
+    display: block;
+    text-align: right;
+    font-size: 10px;
+    line-height: 10px;
+}
+.index .poweredby >.c{
+    font-size: 11px;
+    line-height: 24px;
+    padding-left: 15px;
+}
+
+.index .poweredby img {
+    position: absolute;
+    left: 0;
+    top: 14px;
+    width: 13px;
+
 }
 
 
@@ -85,11 +106,17 @@
 .index-service-new > .items > .item{
     display: inline-block;
     float: left;
-    width: 25%;
+    width: 24%;
+    margin-right: 1%;
+    text-align: center;
     font-size: 14px;
     line-height:28px;
     color: #f0f0f0;
 
+    border:1px solid #18987b;
+    border-radius: 2px;
+
+    box-shadow: inset 0px 1px 2px #19b89a;
 }
 
 .index-service-new > .items > .item > .icon{
@@ -174,9 +201,9 @@
 
 .index-main > .item > .more{
     position: absolute;
-    top:12px;
+    top:10px;
     right: -6px;
-    font-size: 13px;
+    font-size: 24px;
     color:#ccc;
 }
 
