--- a/modules/appointment/view/index.html
+++ b/modules/appointment/view/index.html
@@ -225,7 +225,7 @@
                     </div>
                     <div>
                         <i class="icon add to cart"></i>
-                        {{item.StoreScale}}
+                        {{item.AppointmentCount}}
                     </div>
                 </div>
             </div>
@@ -274,7 +274,6 @@
 
 </coo-modal>
 
-
 <coo-modal size="large" show="category.modalVisible">
     <i class="icon close"></i>
     <div class="title">
@@ -298,7 +297,6 @@
     </div>
 
 </coo-modal>
-
 
 <coo-modal size="small" show="error.modalVisible">
     <i class="icon close" ng-show="error.closable"></i>
