--- a/modules/store/view/list.html
+++ b/modules/store/view/list.html
@@ -37,7 +37,7 @@
                 </div>
                 <div>
                     <i class="icon add to cart"></i>
-                    {{item.StoreScale}}
+                    {{item.AppointmentCount}}
                 </div>
             </div>
         </div>
