--- a/public/css/index.css
+++ b/public/css/index.css
@@ -186,6 +186,15 @@
     line-height: 20px;
 }
 
+.index-main > .item > .sub > .address {
+    display: block;
+    height: 20px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    -webkit-text-overflow: ellipsis;
+}
+
 .index-main > .item > .sub.times > span{
     display: inline-block;
     margin-right: 8px;
