--- a/modules/membership/view/package.html
+++ b/modules/membership/view/package.html
@@ -17,17 +17,11 @@
         <div class="package" ng-repeat="item in packages" ng-click="toPay(item)">
             <div class="ui label ribbon orange name">{{item.TemplateName}}</div>
             <div class="services">
-                <div class="service" ng-repeat="service in item.VipCardTemplateItems">{{service.ItemName}} {{service.Amount}}次</div>
-            </div>
-            <div class="description" ng-if="false">
-                123qwewq
-            </div>
-            <div class="expire"  ng-if="false">
-                有效期:365天
+                <div class="service" ng-if="item.Banalce>0">储值金额 {{item.Banalce}}元</div>
+                <div class="service" ng-repeat="service in item.VipCardTemplateItems">{{service.ItemName}} {{service.Amount == 9999?'不记':service.Amount.toString()}}次</div>
             </div>
 
             <div class="price">{{item.Price}}元</div>
-            <s class="oldPrice" ng-if="false">原价:200元</s>
 
             <div class="btn-pay">
                 购买
